css/style.css
:root {
  --text-color: #3d3d3d;
  --text-font: 'Inconsolata', monospace;
}

html,
body {
  font-family: var(--text-font);
  font-weight: 400;
  margin: 0 auto;
  padding: 0 auto;
}

.container1 {
  max-width: 1440px;
  margin: 0 auto;
}

.menu ul {
  padding: 10px 100px;
}

.menu li {
  list-style: none;
  display: inline;
  justify-content: space-around;
  align-content: center;
  padding-left: 20px;
  padding-right: 20px;
  font-size: 24px;
}

.menu a {
  text-decoration: none;
  color: var(--text-color);
  padding: 20px;
}

.menu a:hover {
  color: rgba(180, 105, 164, 0.76);
  transition: 0.3s;
  text-shadow: 2px 2px 3px rgb(136, 32, 101), 0 0 2em rgb(0, 0, 0), 0 0 0.5em rgb(233, 32, 132);
  animation: light 1.5s linear infinite alternate;
}

@keyframes light {
  0% {
    text-shadow: 0 0 20px 0 rgba(190, 77, 227, 0);
  }
  100% {
    text-shadow: 0 0 20px 0 rgba(190, 77, 227, 1);
  }
}

header {
  width: 1440px;
  height: 600px;
  display: inline-flexbox;
  background-repeat: no-repeat;
  background-size: auto;
  background-position: right;
}

h1 {
  width: 100vw;
  color: var(--text-color);
  font-size: 60px;
  margin: 0 auto;
  padding-top: 150px;
  padding-left: 150px;
}

.position {
  height: 400px;
  color: var(--text-color);
  font-size: 34px;
  padding-left: 200px;
}

.cv-photo {
  display: flex;
  float: right;
  padding-right: 200px;
}

.bio p{
  color:var(--text-color);
  font-size: 24px;
  padding: 100px 200px;
  line-height: 50px;
}

.bio div {
  height: 100%;
}

h2 {
  text-align: center;
  margin-bottom: 50px;
}

.skills {
  color: var(--text-color);
  font-size: 24px;
  margin: 0 auto;

}

.skills-items {
  display: inline-flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  gap: 20px;
}

.skills-item {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.skills-icons {
  width: 150px;
}

.code-example {
  height: 400px;
  color: var(--text-color);
  font-size: 24px;
  padding: 0 50px;
  margin-bottom: 100px;
}

pre {
  font: 1em sans-serif rgb(255, 255, 255);
  background-color: rgb(0, 0, 0);
  color: azure;
  width: 80%;
  height: 90%;
  margin: 0 auto;
}

.projects {
  color: var(--text-color);
  font-size: 24px;
  padding: 0 100px;
}

.projects div {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 20px 20px;
}

.projects img {
    height: 300px;
    width: 450px;
}

.projects a {
  text-decoration: none;
  color: var(--text-color);
}

.education {
  color: var(--text-color);
  font-size: 24px;
  padding: 0 100px;
  line-height: 50px;
}

.languages {
  color: var(--text-color);
  font-size: 24px;
  padding: 0 100px;
}

.languages p {
  padding-left: 50px;
}
   
.contacts {
  color: var(--text-color);
  font-size: 24px;
  padding: 0 100px;
  line-height: 50px;
  height: 700px;
  width: 1200px;
}

.map {
  float: right;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 100px;
  background-color: #000000d2;
}

.ref {
  display: flex;
  align-items: center;
  text-decoration: none;
}

.footer_year {
  font-size: medium;
  color: rgb(255, 255, 255);
}

.rsschool-logo {
  width: 100px;
  height: 100px;
  filter: invert(1);
}

.footer_logo a {
  display: inline-block;
  text-decoration: none;
  justify-content: space-around;
  padding: 5px;
} 

.telegram img,
.github img {
  width: 32px;
  filter: invert(1);
}

.codewars img {
  width: 32px;
}

